# authentra

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.sh  compose.yaml  def.ts  dev.Dockerfile  dev.env  docker-compose.yaml  generate-types.sh  openapi.yaml  package-lock.json  redocly.yaml  run-tracing.sh  schema.json  sudo
.cargo/: config.toml
.helix/: languages.toml
chart/: Chart.yaml  local-values.yaml  values.yaml
chart/templates/: deployment.yaml  secret.yaml
crates/model/: Cargo.toml  typeshare.toml
crates/model/schemas/: flow.json
crates/model/src/: data.rs  error.rs  lib.rs  policy.rs  prompt.rs  stage.rs
frontend/: .dockerignore  .env.development  .env.production  Dockerfile  README.md  entry.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  tsconfig.node.json  uno.config.ts  unocss.config.ts  vite.config.ts
frontend/src/: App.svelte  Flow.svelte  app.css  app.d.ts  app.html  hooks.server.ts  main.ts
frontend/src/api/: api.ts  model.d.ts  schema.ts
frontend/src/components/: IdentificationInput.vue  PasswordInput.vue
frontend/src/lib/: Navbar.svelte  utils.ts
frontend/src/lib/api/: admin.ts  developer.ts  index.ts  types.ts  user.ts
frontend/src/lib/components/: AdminShell.svelte  NavEntry.svelte  Shell.svelte  ThemeToggle.svelte  UrlList.svelte
frontend/src/lib/server/: apis.ts  utils.ts
frontend/src/lib/server/apis/: index.ts  oauth.ts  user.ts
frontend/src/router/: index.ts
frontend/src/routes/: +layout.svelte
frontend/src/routes/(auth)/: +layout.svelte
frontend/src/routes/(auth)/login/: +page.server.ts  +page.svelte
frontend/src/routes/(auth)/logout/: +page.server.ts
frontend/src/routes/(auth)/register/: +page.server.ts  +page.svelte
frontend/src/routes/(front)/: +page.server.ts  +page.svelte
frontend/src/routes/admin/: +layout.svelte  +page.server.ts
frontend/src/routes/admin/application-groups/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/admin/applications/: +page.server.ts  +page.svelte
frontend/src/routes/admin/users/: +page.server.ts  +page.svelte
frontend/src/routes/admin/users/[id]/: +page.server.ts  +page.svelte
frontend/src/routes/dash/: +page.server.ts  +page.svelte
frontend/src/routes/developer/: +layout.svelte  +page.svelte
frontend/src/routes/developer/applications/: +page.server.ts  +page.svelte
frontend/src/routes/flow/: Flow.svelte  Form.svelte
frontend/src/routes/oauth/authorize/: +page.server.ts  +page.svelte
frontend/src/stores/: auth.ts
frontend/src/views/: FlowView.vue  HomeView.vue
model/: Cargo.toml  def.ts
model/examples/: generate-schemas.rs
model/schemas/: flow-data.json  flow-designation.json  flow.json  partial-user.json  policy.json  prompt.json  reference.json  stage.json
model/src/: data.rs  error.rs  flow.rs  lib.rs  policy.rs  prompt.rs  reference.rs  stage.rs  tenant.rs  user.rs
outpost/: Cargo.toml
policy-engine/: Cargo.toml
policy-engine/src/: context.rs  lib.rs  network.rs  request.rs  uri.rs  user.rs
server/: .env  Cargo.toml  bacon.toml  dev.env  openapi.yaml  sqlx-data.json  test_data.sql
server/migrations/: 20230124233622_initial_schema.sql  20230214211741_initial_data.sql  V1__initial.sql  V1__initial_schema.sql  V2__intial_data.sql
server/queries/tenants/: select-by-host.sql  select-by-id.sql
server/src/: api.rs  auth.rs  config.rs  error.rs  executor.rs  flow_storage.rs  flow_storage.rs.old  interface.rs  lib.rs  main.rs  middleware.rs  model.rs  otel_middleware.rs  routes.rs  service.rs  setup.rs  stage.rs  state.rs  telemetry.rs  test_util.rs  tracing_mw.rs  tracing_setup.rs  utils.rs
server/src/api/: csrf.rs  error.rs  mod.rs  router.rs  sql_tx.rs
server/src/api/v1/: auth.rs  executor.rs  flow.rs  mod.rs  policy.rs
server/src/api/v1/auth/: login.rs  logout.rs  register.rs
server/src/executor/: context.rs  data.rs  flow.rs
server/src/interface/: flow.rs
server/src/middleware/: auth.rs  sql.rs
server/src/middleware/auth/: layer.rs  service.rs
server/src/middleware/sql/: layer.rs
server/src/model/: flow.rs  policy.rs  prompt.rs  reference.rs  stage.rs
server/src/routes/: admin.rs  application_groups.rs  applications.rs  auth.rs  oauth.rs  user.rs
server/src/routes/admin/: application_groups.rs  applications.rs
server/src/service/: policy.rs  user.rs
server/src/service/policy/: service.rs
server/src/telemetry/: middleware.rs  otel.rs
server/src/utils/: id_gen.rs  password.rs
server/templates/: flow.hbs
server/tests/: hello_world.rs
shared/: Cargo.toml
storage/: Cargo.toml
storage/src/: cache.rs  flow.rs  lib.rs  policy.rs  prompt.rs  stage.rs  storage.rs  tenant.rs
storage/src/sql/flow/: all-ids.sql  bindings-by-entry.sql  bindings-by-flow.sql  by-id.sql  by-slug.sql  entries-by-flow.sql  list-all.sql
storage/src/sql/policy/: all-ids.sql  by-id.sql  by-slug.sql  expression-by-id.sql  insert.sql  list-all.sql  password-expiration-by-id.sql  password-strength-by-id.sql
storage/src/sql/prompt/: all-ids.sql  by-id.sql
storage/src/sql/stage/: all-ids.sql  by-id.sql  by-slug.sql  identification-by-id.sql  prompt-bindings-by-stage.sql
storage/src/sql/tenant/: all-ids.sql  by-host.sql  by-id.sql  get-default.sql
tools/: Cargo.toml
tools/src/: cli.rs  load_test.rs  main.rs
