[workspace]
members = ["server"]
resolver = "2"

[workspace.dependencies]
tokio = "1.25"
futures = "0.3"
pin-project = "1.0"
http = "0.2"
axum = "0.6"
jsonwebtoken = "8.2"
serde = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.1"
tracing-error = "0.2"
tower = "0.4"
tower-http = "0.4"
tower-cookies = "0.9"
refinery = "0.8"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
opentelemetry = "0.19"
opentelemetry-otlp = "0.12"
tracing-opentelemetry = { git = "https://github.com/jaysonsantos/tracing-opentelemetry.git", branch = "update-opentelemetry-0.19" }
config = { version = ">=0.13.3", default-features = false }
rhai = "1.12"
argon2 = "0.4"
moka = "0.10"
base64 = "0.21"
once_cell = "1.17"
rand = "0.8"
uuid = "1.3"
time = "0.3"
parking_lot = { version = "0.12", features = ["send_guard"] }
futures-util = "0.3"
async-trait = "0.1"
derive_more = { git = "https://github.com/JelteF/derive_more", rev = "ce92a90" }
