[workspace]
members = ["server"]
resolver = "2"

[workspace.dependencies]
tokio = "1.25"
futures = "0.3"
axum = "0.6"
jsonwebtoken = "8.2"
serde = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = "0.4"
refinery = "0.8"
deadpool-postgres = "0.10"
tokio-postgres = "0.7"
opentelemetry = "0.19"
opentelemetry-otlp = "0.12"
tracing-opentelemetry = { git = "https://github.com/jaysonsantos/tracing-opentelemetry.git", branch = "update-opentelemetry-0.19" }
config = { version = ">=0.13.3", default-features = false }
argon2 = "0.4"
base64 = "0.21"
once_cell = "1.17"
rand = "0.8"
uuid = "1.3"
derive_more = { git = "https://github.com/JelteF/derive_more", rev = "ce92a90" }
