[package]
name = "authust_model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axum = ["dep:axum", "dep:async-trait"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
impl-tools = { workspace = true }
async-trait = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["error", "display", "from"] }
postgres-types = { version = "0.2.4", features = ["derive", "with-time-0_3"] }
time = { workspace = true, features = ["serde"] }
# datacache = { git = "https://github.com/authust/datacache", optional = true }
datacache = { workspace = true, optional = true, features = ["serde"] }
