[package]
name = "policy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rhai = { workspace = true, features = [
  "sync",
  "no_float",
  "no_index",
  "no_function",
  "no_module",
] }
http.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
base64.workspace = true
authust_model = { path = "../model" }

[dev-dependencies]
concat-idents = "1.1.4"
