[package]
name = "authust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# This feature only has an effect when debug_assertions are turned on
dev-mode = []
otlp-http-proto = ["opentelemetry-otlp/http-proto"]

[dependencies]
serde = { workspace = true, features = ["derive", "rc"] }
config = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
once_cell = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
http.workspace = true
uuid = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde"] }
parking_lot.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
futures-util.workspace = true
# Wait for tower-cookies to update to new version
async-trait = { workspace = true }
argon2.workspace = true
derive_more = { workspace = true, features = ["error", "display", "from"] }
tracing-error.workspace = true
moka.workspace = true
serde_json = { workspace = true, features = ["preserve_order"] }
axum = { workspace = true, features = ["headers", "macros", "http2"] }
tower = { workspace = true, features = ["timeout"] }
futures.workspace = true
pin-project.workspace = true
tower-http = { workspace = true, features = ["trace", "cors", "fs"] }
serde_urlencoded.workspace = true
tower-cookies.workspace = true
model = { path = "../model", features = ["axum"], package = "authust_model" }
opentelemetry = { workspace = true, features = ["trace", "rt-tokio"] }
tracing-opentelemetry.workspace = true
policy-engine = { path = "../policy-engine" }
tracing-log.workspace = true
refinery = { workspace = true, features = ["tokio-postgres"] }
deadpool-postgres = { workspace = true, features = ["serde"] }
tokio-postgres = { workspace = true, features = [
  "with-uuid-1",
  "with-time-0_3",
] }
opentelemetry-otlp.workspace = true
storage = { path = "../storage" }
hyper = "0.14.25"