[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "authust"
path = "src/main.rs"

[dependencies]
argon2.workspace = true
axum = { workspace = true, features = ["http2"] }
config.workspace = true
deadpool-postgres = { workspace = true, features = ["serde"] }
derive_more = { workspace = true, features = ["from", "error", "display"] }
jsonwebtoken.workspace = true
once_cell.workspace = true
opentelemetry = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp.workspace = true
rand.workspace = true
refinery = { workspace = true, features = ["tokio-postgres"] }
serde.workspace = true
serde_json.workspace = true
socket2 = "0.5.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "tracing", "socket2"] }
tokio-postgres = { workspace = true, features = ["with-uuid-1"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace", "sensitive-headers", "cors"] }
tracing.workspace = true
tracing-error = "0.2.0"
tracing-opentelemetry.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
